<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/my_addresses"
        app:titleCentered="true" />
    <!-- Main Content ScrollView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_addresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_address"
        tools:itemCount="3"
        tools:listitem="@layout/item_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/primary_100"
        android:text="@string/add_new_address"
        android:textColor="@color/primary_500"
        android:textSize="18dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_plus"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        android:layout_marginBottom="8dp"
        app:iconTint="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/buttonApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="8dp"
        android:allowClickWhenDisabled="false"
        android:textSize="18dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/apply_address"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary_500"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>